1.0b7 unreleased

- client web ports for clients > 1 were not enumerated correctly.
  [smcmahon]

- plone_zeo_port was not being respected in client parts. (Thanks, rockfruit)
  [smcmahon]

- Fix syntax error in restart_clients.sh script.

1.0b6 2014-12-17

- Update bootstrap.py to a version that allows pinning of setuptools; Pin it to 8.0.4.

1.0b5 2014-12-08

- Refactor to remove develop.cfg and base.cfg.

- Add ability to specify mr.developer sources.

- Added extra variables for zcml slugs, client extras and client1 extras.

- Refactored the client implementation in buildout to allow for separate handling of client1 and the remaining clients. This should allow for   single client options like webdav and ftp.

1.0b4 2014-12-02

- First really practical release.