@@ -4,7 +4,7 @@
 # https://github.com/plone/Installers-UnifiedInstaller
 
 extends =
-    versions.cfg
+    http://dist.plone.org/release/{{ plone_version }}/versions.cfg
 
 eggs-directory=../buildout-cache/eggs
 download-cache=../buildout-cache/downloads
